--- a/app.json
+++ b/app.json
@@ -7,10 +7,10 @@
   "env": {
     "UUID": {
       "description": "VLESS UUID",
-      "value": "10974d1a-cbd6-4b6f-db1d-38d78b3fb109"
+      "value": "5e693cc0-b3af-450f-b9b9-2d57d1a09c65"
     }
   },
-  "website": "https://github.com/rptec/",
-  "repository": "https://github.com/rptec/heroku-vless",
+  "website": "https://github.com/dsgbt/",
+  "repository": "https://github.com/dsgbt/gfjyftdg",
   "stack": "container"
 }
